--- a/cpp-tutorial/stage2/main/BUILD
+++ b/cpp-tutorial/stage2/main/BUILD
@@ -1,7 +1,15 @@
 load("@rules_cc//cc:defs.bzl", "cc_binary", "cc_library")
 
+cc_library(
+    name = "hello-greet",
+    srcs = ["hello-greet.cc"],
+    hdrs = ["hello-greet.h"],
+)
 
 cc_binary(
     name = "hello-world",
-    srcs = ["hello-world.cc", "hello-greet.cc", "hello-greet.h"],
+    srcs = ["hello-world.cc"],
+    deps = [
+        ":hello-greet",
+    ],
 )
